# MAX-SHANY

./: .gitignore  README.md  supabase_schema.sql
backend/: database.py  main.py  pyproject.toml
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css  supabase.js
frontend/src/components/: BottomNav.css  BottomNav.jsx  CoursesPanel.jsx  LoadingPage.css  LoadingPage.jsx  TodoPanel.jsx
frontend/src/hooks/: useIsMobile.js
