[project]
name = "max-shany-backend"
version = "1.0.0"
description = "API FastAPI pour l'app Max & Shany (courses + à faire, via Supabase)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "supabase>=2.9.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
